Add handler code and optimize swagger specification
