# doc/api_swagger.yml
@@ -56,6 +56,7 @@ definitions:
         $ref: "#/definitions/item_hash"
       yaml_hidden:
         type: boolean
+        x-omitempty: false
       yaml:
         type: string
   checker4api:
@@ -89,6 +90,7 @@ definitions:
         $ref: "#/definitions/item_hash"
       yaml_hidden:
         type: boolean
+        x-omitempty: false
       yaml:
         type: string
   listor_data:
@@ -118,14 +120,19 @@ definitions:
     properties:
       cloud_type:
         type: string
+        x-omitempty: false
       resource_id:
         type: string
+        x-omitempty: false
       resource_name:
         type: string
+        x-omitempty: false
       actual_value:
         type: string
+        x-omitempty: false
       resource_in_risk:
         type: boolean
+        x-omitempty: false
       metadata:
         type: object
         additionalProperties:
@@ -194,9 +201,7 @@ paths:
               msg:
                 type: string
               data:
-                type: array
-                items:
-                  $ref: "#/definitions/listor4api"
+                $ref: "#/definitions/listor4api"
         404:
           description: Id not found
           schema:
@@ -305,9 +310,7 @@ paths:
               msg:
                 type: string
               data:
-                type: array
-                items:
-                  $ref: "#/definitions/baseline4api"
+                $ref: "#/definitions/baseline4api"
         404:
           description: Id not found
           schema:
@@ -382,9 +385,7 @@ paths:
               msg:
                 type: string
               data:
-                type: array
-                items:
-                  $ref: "#/definitions/baseline_data"
+                $ref: "#/definitions/baseline_data"
         404:
           description: Id not found
           schema:
@@ -416,6 +417,12 @@ paths:
           items:
             type: string
           collectionFormat: multi
+        - description: Whether only returns cloud resources in risk (failing the benchmark check)
+          in: query
+          name: risk_only
+          required: false
+          type: boolean
+          default: false
         - description: List of properties to be validated
           in: body
           name: data
