# internal/server/operations/baseline/get_baseline_get_definition.go
@@ -8,7 +8,6 @@ package baseline
 import (
 	"context"
 	"net/http"
-	"strconv"
 
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime/middleware"
@@ -71,7 +70,7 @@ type GetBaselineGetDefinitionOKBody struct {
 	Code int64 `json:"code,omitempty"`
 
 	// data
-	Data []*server_model.Baseline4api `json:"data"`
+	Data *server_model.Baseline4api `json:"data,omitempty"`
 
 	// msg
 	Msg string `json:"msg,omitempty"`
@@ -96,22 +95,15 @@ func (o *GetBaselineGetDefinitionOKBody) validateData(formats strfmt.Registry) e
 		return nil
 	}
 
-	for i := 0; i < len(o.Data); i++ {
-		if swag.IsZero(o.Data[i]) { // not required
-			continue
-		}
-
-		if o.Data[i] != nil {
-			if err := o.Data[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("getBaselineGetDefinitionOK" + "." + "data" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("getBaselineGetDefinitionOK" + "." + "data" + "." + strconv.Itoa(i))
-				}
-				return err
+	if o.Data != nil {
+		if err := o.Data.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("getBaselineGetDefinitionOK" + "." + "data")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("getBaselineGetDefinitionOK" + "." + "data")
 			}
+			return err
 		}
-
 	}
 
 	return nil
@@ -133,24 +125,20 @@ func (o *GetBaselineGetDefinitionOKBody) ContextValidate(ctx context.Context, fo
 
 func (o *GetBaselineGetDefinitionOKBody) contextValidateData(ctx context.Context, formats strfmt.Registry) error {
 
-	for i := 0; i < len(o.Data); i++ {
+	if o.Data != nil {
 
-		if o.Data[i] != nil {
-
-			if swag.IsZero(o.Data[i]) { // not required
-				return nil
-			}
-
-			if err := o.Data[i].ContextValidate(ctx, formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("getBaselineGetDefinitionOK" + "." + "data" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("getBaselineGetDefinitionOK" + "." + "data" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
+		if swag.IsZero(o.Data) { // not required
+			return nil
 		}
 
+		if err := o.Data.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("getBaselineGetDefinitionOK" + "." + "data")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("getBaselineGetDefinitionOK" + "." + "data")
+			}
+			return err
+		}
 	}
 
 	return nil
